Search API and Some APIs Completed
