# router/review.router.js
@@ -1,6 +1,6 @@
 import express from 'express'
 import { userFilesUpload } from '../middleware/multer.js';
-import {   Bookmark, createReview, follow, followersList, followingList, like, reportUser } from '../controller/reviewController.js';
+import {   Bookmark, createCommand, createReview, deleteCommand, editCommand, follow, followersList, followingList, getAllCommand, like, reportUser } from '../controller/reviewController.js';
 
 const reviewRouter = express.Router()
 
@@ -38,11 +38,30 @@ reviewRouter.post("/like",(req,res)=>{
 
 
 
-
 {/**Report */}
 reviewRouter.post("/reportUser",(req,res)=>{
     //#swagger.tags = ["Review"]
     reportUser(req,res)
 })
+
+
+{/**Command */}
+reviewRouter.post("/addCommand",(req,res)=>{
+    //#swagger.tags = ['Review']
+    createCommand(req,res)
+})
+reviewRouter.post("/getCommands",(req,res)=>{
+    //#swagger.tags = ['Review']
+    getAllCommand(req,res)
+})
+reviewRouter.put("/editCommand/:id",(req,res)=>{
+    //#swagger.tags = ['Review']
+    editCommand(req,res)
+})
+reviewRouter.delete("/deleteCommand/:id",(req,res)=>{
+    //#swagger.tags  = ['Review']
+    deleteCommand(req,res)
+})
+
 
 export default reviewRouter;
